[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "honestplus"
version = "0.1.0"
description = "Unofficial async Python wrapper for the Honest+ API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Chiina"}
]
dependencies = [
    "aiohttp",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/akachiina/honestplus.py"
Repository = "https://github.com/akachiina/honestplus.py"

[tool.setuptools.packages.find]
include = ["honestplus*"]

[tool.setuptools.package-data]
honestplus = ["fonts/*.ttf"]
